# yaffs2

./: .gitmodules  CMakeLists.txt  readme.txt
direct/: CMakeLists.txt  ydirectenv.h  yportenv.h
include/yaffs2/: posix  system
integration/: CMakeLists.txt  hooks.cpp  os_glue.cpp  yaffscfg.h
integration/nor/: device_driver.cpp  device_driver.hpp
integration/rtos/: os_glue.cpp
